Fix picnic pub spacing

--- a/style.css
+++ b/style.css
@@ -536,7 +536,7 @@ input {
     }
 
     .pandora-main, .miro-main {
-        grid-template-rows: 240px 60px auto;
+        grid-template-rows: 250px 60px auto;
     }
 
     #love-main{
